media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: nuclearbombcell-2
      containers:
      - image: linuxserver/prowlarr:latest
        name: prowlarr
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - containerPort: 9696
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1024Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 0.5
            memory: 256Mi
      volumes:
      - name: config
        nfs:
            server: 192.168.1.215
            path: /meow/prowlarr/config
            readOnly: false
